== Changelog ==

= 1.7.0 - xx-xx-2020 =
* Enhancement - Add support for offline forms addon.
* Added - Introduce `get_multiple` method in `EVF_Form_Handler` to fetch multiple forms.
* Fix - Date/Time field to use local date instead of default UTC.
* Fix - Export of field data with HTML encoded special characters.
* Fix - The field placeholder & default value 0 (zero) does not display on the frontend.
* Tweak - Updated jQuery Validation JS library to v1.19.2.
* Tweak - Add trigger `everest_forms_loaded` to notify plugins that the core was loaded.
* Tweak - Modify duplicated action hook `everest_forms_general_settings` to `everest_forms_inline_general_settings` for builder general settings.
* Dev - Introduced `everest_forms_{$export_type}_export_delimiter` filter to change separator string while exporting CSV files.

= 1.6.7 - 17-05-2020 =
* Feature - Added a new Pro field Range Slider.
* Fix - JS error while removing list from choice field.
* Tweak - Add support for next max value of row ID.

= 1.6.6.1 - 10-05-2020 =
* Fix - Sanitization of CSV exported field values.
* Fix - Conflict within WooCommerce checkout page.
* Fix - Flatpickr Calendar does not open on Android Chrome.
* Tweak - Updated selectWoo JS library to v1.6.0.
* Tweak - Updated flatpickr JS library to v4.6.3.

= 1.6.6 - 01-05-2020 =
* Fix - Log file deletion.
* Fix - Field Options getting freezed for the first field.
* Fix - Perfect Scrollbar library updated to fix RTL issue.
* Fix - Undefined PHP notice thrown if confirmation email didn't match.
* Fix - False-positive required message displayed upon email validation.
* Enhancement - Email attachment workflow.
* Enhancement - Added enhanced select feature to the Dropdown field.
* Enhancement - Added option to disable certain dates in the Date/Time field.

= 1.6.5 - 10-04-2020 =
* Fix - Shortcode design issue in list table.
* Fix - Form block deprecated notices in console.
* Fix - Selective html tag support in field label.